--- a/package.json
+++ b/package.json
@@ -12,24 +12,28 @@
     "sanity:deploy": "sanity deploy"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next-sanity": "^7.0.0",
     "@portabletext/react": "^3.0.0",
     "@sanity/image-url": "^1.0.2",
     "clsx": "^2.1.0",
+    "next": "14.2.5",
+    "next-sanity": "^7.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.3.8",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@sanity/vision": "^3.57.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.36",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "sanity": "^3.57.0",
-    "@sanity/vision": "^3.57.0"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
